--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
 
 
@@ -17,15 +26,123 @@
 
 
 
-    
+
     <section class="info">
         <div class="info-box">
             <a class="info-logo" href="#">
                 <img class="info-img" src="./img/info-img.svg" alt="">
             </a>
             <p class="info-text">Katta maqsadli tadbirkorlar uchun yopiq biznes klub</p>
-            
+
         </div>
     </section>
+    <section class="club">
+        <div class="club-box">
+            <div class="club-row">
+                <img class="club-logo" src="./img/club-logo.svg" alt="">
+            </div>
+            <div class="club-div">
+                <h2 class="club-title">Asoschilar Club –</h2>
+                <p class="club-text">biznes va shaxsiy rivojlanishda o‘sishga intilayotgan tadbirkorlar va biznes
+                    rahbarlarini
+                    birlashtiruvchi yopiq hamjamiyat.</p>
+            </div>
+            <img width="100%" src="./img/club-img.png" alt="">
+        </div>
+    </section>
+
+    <section class="hero">
+        <div class="hero-box">
+            <div class="hero-row">
+                <a class="hero-logo" href="#">
+                    <img class="hero-img" src="./img/hero-logo.svg" alt="">
+                </a>
+            </div>
+            <h2 class="hero-title">Missiyamiz:</h2>
+            <div class="hero-div">
+                <img class="hero-img2" src="./img/hero-img.png" alt="">
+
+                <p class="hero-text">Tadbirkorlarning fikrlashini kengaytirish va o‘sishiga sababchi bo’lish</p>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="item">
+        <div class="item-box">
+            <div class="item-row">
+                <img src="./img/item-logo.svg" alt="">
+            </div>
+            <h2 class="item-title">Statistika bilan tanishing:</h2>
+            <div class="item-list">
+                <div>
+                    <h3 class="item-list-title">30+</h3>
+                    <p class="item-list-text">A’zolar soni</p>
+                </div>
+                <div>
+                    <h3 class="item-list-title">10,000$+</h3>
+                    <p class="item-list-text">30% a’zolarning <br> oylik daromadi</p>
+                </div>
+                <div>
+                    <h3 class="item-list-title">50,000$+</h3>
+                    <p class="item-list-text">10% a’zolarning <br> oylik daromadi</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="networking ">
+        <div class="networking-box">
+            <div class="networking-logo">
+                <img src="./img/club-logo.svg" alt="">
+            </div>
+            <h2 class="networking-title">Klub a’zolari</h2>
+            <div class="networking-div ">
+                <div class="networking-row">
+                    <img class="networking-imgg" src="./img/networking-img.png" alt="">
+                    <h4 class="networking-div-title">Sherzod Rabbimov</h4>
+                    <p class="networking-div-text">Premium door asoschisi</p>
+                </div>
+                <div class="networking-row">
+                    <img class="networking-imgg" src="./img/network-2.png" alt="">
+                    <h4 class="networking-div-title">Kamoliddin Mansur</h4>
+                    <p class="networking-div-text">Olmon academy asoschisi</p>
+                </div>
+                <div class="networking-row">
+                    <img class="networking-imgg" src="./img/network-3.png" alt="">
+                    <h4 class="networking-div-title">Sherzod Darxonov</h4>
+                    <p class="networking-div-text">Foggi do’konlari CEO’si</p>
+                </div>
+
+                <div class="networking-row">
+                    <img class="networking-imgg" src="./img/network-4.png" alt="">
+                    <h4 class="networking-div-title">Agasi Arakelyan</h4>
+                    <p class="networking-div-text">Kelyanmedia asoschisi</p>
+                </div>
+
+                <div class="networking-row">
+                    <img class="networking-imgg" src="./img/network-5.png" alt="">
+                    <h4 class="networking-div-title">Azam Karimberdiyev</h4>
+                    <p class="networking-div-text">Yumecs logistik <br> kompaniyasi asoschisi</p>
+                </div>
+
+                <div class="networking-row">
+                    <img class="networking-imgg" src="./img/network-6.png" alt="">
+                    <h4 class="networking-div-title">Davron Karimov</h4>
+                    <p class="networking-div-text">Nokhost transport solution <br> kompaniyasi asoschisi</p>
+                </div>
+
+                <div class="networking-row">
+                    <img class="networking-imgg" src="./img/network-7.png" alt="">
+                    <h4 class="networking-div-title">Islom Fayzullayevich</h4>
+                    <p class="networking-div-text">“Khad'ya Farm”, "Khadya Nur", <br>
+                        "Zest" kompaniyalari asoschisi</p>
+                </div>
+                <h1 class="networking-row-title">30+</h1>
+
+            </div>
+        </div>
+    </section>
+
 </body>
+
 </html>
